github actions e variaveis depl

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <main>
         <h2>Sobre</h2>
         <p>Esta é uma página de exemplo com HTML e CSS interno.</p>
-        <p>Para saber mais, visite nosso <a href="#">site oficial</a>.</p>
+        <p>Para saber mais, visite nosso <a href="https://github.com/DanielDeSousaDEV">site oficial</a>.</p>
     </main>
     <footer>
         &copy; 2024 Minha Página. Todos os direitos reservados.
