--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
         <h2>Sobre</h2>
         <p>Esta é uma página de exemplo com HTML e CSS interno.</p>
         <p>Para saber mais, visite nosso <a href="https://github.com/DanielDeSousaDEV">site oficial</a>.</p>
+        <strong>ola mundo</strong>
     </main>
     <footer>
         &copy; 2024 Minha Página. Todos os direitos reservados.
